[gd_scene load_steps=7 format=2]

[ext_resource path="res://World.gd" type="Script" id=1]
[ext_resource path="res://SpaceEnvironment.tres" type="Environment" id=2]
[ext_resource path="res://SystemMapDetails.tscn" type="PackedScene" id=3]
[ext_resource path="res://Art/White hex.png" type="Texture" id=4]
[ext_resource path="res://Art/light-spot-orb-png-8.png" type="Texture" id=5]

[sub_resource type="CapsuleShape" id=1]

radius = 1.0
height = 1.0

[node name="World" type="Spatial"]

script = ExtResource( 1 )

[node name="camera_gimbal" type="Spatial" parent="." index="0"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 50 )
_sections_unfolded = [ "Transform" ]

[node name="camera" type="Camera" parent="camera_gimbal" index="0"]

keep_aspect = 1
cull_mask = 1048575
environment = ExtResource( 2 )
h_offset = 0.0
v_offset = 0.0
doppler_tracking = 0
projection = 0
current = false
fov = 70.0
size = 80.0
near = 0.05
far = 200.0
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="system_gimbal" type="Spatial" parent="." index="1"]

_sections_unfolded = [ "Transform" ]

[node name="system" type="Spatial" parent="system_gimbal" index="0"]

transform = Transform( 0.850888, 0, 0.525348, 0, 1, 0, -0.525348, 0, 0.850888, 0, 0, 0 )
_sections_unfolded = [ "Transform" ]

[node name="SystemMapDetails" parent="system_gimbal/system" index="0" instance=ExtResource( 3 )]

_sections_unfolded = [ "Transform" ]

[node name="hexbot" type="Sprite3D" parent="system_gimbal/system" index="1"]

transform = Transform( 13.9546, 0, -8.6157, 0, 1, 0, 8.6157, 0, 13.9546, 0, -19.992, 0 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
centered = true
offset = Vector2( 0, 0 )
flip_h = false
flip_v = false
modulate = Color( 1, 1, 1, 1 )
opacity = 1.0
pixel_size = 0.01
axis = 1
transparent = true
shaded = false
double_sided = true
alpha_cut = 0
texture = ExtResource( 4 )
vframes = 1
hframes = 1
frame = 0
region_enabled = false
region_rect = Rect2( 0, 0, 0, 0 )
_sections_unfolded = [ "Transform" ]

[node name="hextop" type="Sprite3D" parent="system_gimbal/system" index="2"]

transform = Transform( 13.9546, 0, -8.6157, 0, 1, 0, 8.6157, 0, 13.9546, 0, 24.6127, 0 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
centered = true
offset = Vector2( 0, 0 )
flip_h = false
flip_v = false
modulate = Color( 1, 1, 1, 1 )
opacity = 1.0
pixel_size = 0.01
axis = 1
transparent = true
shaded = false
double_sided = true
alpha_cut = 0
texture = ExtResource( 4 )
vframes = 1
hframes = 1
frame = 0
region_enabled = false
region_rect = Rect2( 0, 0, 0, 0 )
_sections_unfolded = [ "Transform" ]

[node name="UI" type="Control" parent="." index="2"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="tree" type="Tree" parent="UI" index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 236.0
margin_bottom = 596.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
columns = 2
allow_reselect = false
allow_rmb_select = false
hide_folding = false
hide_root = true
drop_mode_flags = 1
select_mode = 0

[node name="select" type="Sprite3D" parent="." index="3"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1 )
visible = false
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
centered = true
offset = Vector2( 0, 0 )
flip_h = false
flip_v = false
modulate = Color( 1, 1, 1, 1 )
opacity = 0.3
pixel_size = 0.01
axis = 2
transparent = true
shaded = false
double_sided = true
alpha_cut = 0
texture = ExtResource( 5 )
vframes = 1
hframes = 1
frame = 0
region_enabled = false
region_rect = Rect2( 0, 0, 0, 0 )
_sections_unfolded = [ "Transform" ]

[node name="Go to" type="Button" parent="." index="4"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 12.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1

[node name="clickable" type="StaticBody" parent="." index="5"]

input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
friction = 1.0
bounce = 0.0
constant_linear_velocity = Vector3( 0, 0, 0 )
constant_angular_velocity = Vector3( 0, 0, 0 )

[node name="shape" type="CollisionShape" parent="clickable" index="0"]

transform = Transform( 20, 0, 0, 0, 22, 0, 0, 0, 15, 0, 0, 0 )
shape = SubResource( 1 )
disabled = false
_sections_unfolded = [ "Transform" ]

[connection signal="cell_selected" from="UI/tree" to="system_gimbal/system/SystemMapDetails" method="_on_tree_cell_selected"]

[connection signal="pressed" from="Go to" to="system_gimbal/system/SystemMapDetails" method="_on_Go_to_pressed"]


